Fix duration by letting it wrap to next line.

--- a/src/assets/default-theme.less
+++ b/src/assets/default-theme.less
@@ -103,19 +103,20 @@ a {
 
 .duration {
   font-size: #font-sizes[h4];
+  line-height: 1.5;
 
   .start-date {
     display: inline-block;
-  }
 
-  .end-date {
-    display: inline-block;
-
-    &::before {
+    &::after {
       display: inline-block;
       content: '-';
       margin: 0 0.25em;
     }
+  }
+
+  .end-date {
+    display: inline-block;
   }
 }
 
@@ -498,7 +499,7 @@ a {
           @line-margin-left: 5mm;
           @line-margin-right: 5mm;
           display: grid; 
-          grid-template-columns: auto @line-width 1fr;
+          grid-template-columns: 0.3fr @line-width 1fr;
           grid-template-areas: 
             "position line company"
             "duration line summary"
@@ -512,6 +513,7 @@ a {
           .position {
             .h3();
             grid-area: position;
+            margin-right: @line-margin-left;
           }
           
           .duration {
@@ -605,7 +607,6 @@ a {
             
             .duration {
               grid-row: 3;
-              margin-bottom: 0.25em;
             }
   
             .summary {
@@ -633,7 +634,7 @@ a {
           @line-margin-left: 5mm;
           @line-margin-right: 5mm;
           display: grid; 
-          grid-template-columns: auto @line-width 1fr;
+          grid-template-columns: 0.3fr @line-width 1fr;
           grid-template-areas: 
             "institution line area"
             "study-type  line gpa"
@@ -877,7 +878,6 @@ a {
             
             .duration {
               grid-row: 3;
-              margin-bottom: 0.25em;
             }
   
             .summary {
